<resources>
    <string name="app_name">BeastKeeper</string>
    <string name="beast_bio_default">Dusty is 4 years old. He had a gum disease and had all of his teeth
        removed. He doesn\'t particularly seem to care. Except when he bites you, and is confused
        as to why it does nothing.</string>
    <string name="beast_name_default">Dusty</string>
    <string name="profile">Profile</string>
    <string name="medical_history">Medical History</string>
    <string name="beast_medical_default">-Weight: 14lbs\n-Vaccinated\n-Neutered\n-All teeth removed</string>
    <string name="beast_photo_description">Photo of the Beast</string>
    <string name="new_photo">Take a new photo</string>
    <string name="photo_error">You can\'t take a new photo, because you already have the maximum.\n\n
    Tap and hold on an image to delete it.</string>
    <string name="alert_delete_title">Delete this photo?</string>
    <string name="alert_delete_message">This cannot be un-done.</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">no</string>
    <string name="delete_failure">You must have at least 2 photos.</string>
    <string name="failed">Failed to delete.</string>
    <string name="alert_edit_bio">Edit Bio</string>
    <string name="alert_edit_medical">Edit Medical History</string>
    <string name="alert_edit_name">Edit Name</string>
    <string name="length_error">Your beasts name must be 12 or less characters.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
